--- a/docs/int3face/integration.mdx
+++ b/docs/int3face/integration.mdx
@@ -10,8 +10,8 @@ These are steps on how to use the Bi[t]fröst Int3face to bridge external tokens
 
 In order to perform the inbound transfer, it is necessary to obtain a Vault Address. It could be done through the request:
 
->Testnet: https://observer.testnet.int3face.zone/v1/vault_addresses
-Mainnet: https://observer.mainnet.int3face.zone/v1/vault_addresses
+Testnet: https://observer.testnet.int3face.zone/v1/vault_addresses  
+Mainnet: https://observer.mainnet.int3face.zone/v1/vault_addresses  
 
 ## 2. Sending Inbound Transaction to the bridge[​](#2 "Direct link to Sending Inbound Transaction to the bridge")
 
